fixed values exported to appsettings

--- a/src/Backend/appsettings.json
+++ b/src/Backend/appsettings.json
@@ -11,6 +11,14 @@
     "key": "",
     "passphrase": "",
     "secret": "",
-    "pause": true
+    "pause": true,
+    "quantity": 1,
+    "leverage": 1,
+    "takeprofit": 100,
+    "maxTakeprofitPrice": 110000,
+    "maxRunningTrades": 10,
+    "factor": 1000,
+    "addMarginInUsd": 1,
+    "maxLossInPercent": -50
   }
 }
