Add multi-platform Docker support (AMD64/ARM64)
- Update Dockerfile to use multi-architecture base images
- Set default platform to AMD64 in docker-compose.yml
- Add comprehensive platform selection documentation
- Include platform detection guide and build examples
- Support Windows, Mac (Intel/Apple Silicon), Linux, and Raspberry Pi
- Provide manual Docker commands for both architectures
- Add advanced multi-platform building instructions

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build: 
       context: ..
       dockerfile: docker/Dockerfile
+    platform: linux/amd64  # Default to AMD64. Change to linux/arm64 for ARM processors
     container_name: autosatoshi
     restart: unless-stopped
     environment:
