--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -23,10 +23,10 @@ services:
     deploy:
       resources:
         limits:
-          memory: 512M
+          memory: 1G
           cpus: '1.0'
         reservations:
-          memory: 256M
+          memory: 512M
           cpus: '0.5'
     # Health check to monitor the bot
     healthcheck:
