Complete .dockerignore pattern fixes for nested directory structure
- Add **/ prefix to version control files (.git, .gitignore, .gitattributes)
- Ensure all directory-based patterns work with nested project structure
- Optimize Docker build context by excluding files at any depth

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,7 @@
-# Ignore version control files
-.git
-.gitignore
-.gitattributes
+# Ignore version control files (anywhere in the tree)
+**/.git
+**/.gitignore
+**/.gitattributes
 
 # Ignore C#/.NET build artifacts (anywhere in the tree)
 **/bin/
