Make LN Markets endpoint configurable via appsettings.json
Move hardcoded endpoint URL from service constants to LnMarketsOptions for flexible configuration:

- Add Endpoint property to LnMarketsOptions with [Required, Url] validation
- Update LnMarketsApiService to use HttpClient.BaseAddress from configuration
- Update LnMarketsBackgroundService to dynamically build WebSocket URL from endpoint
- Support automatic https:// to wss:// conversion for WebSocket connections
- Update appsettings.json to include endpoint configuration
- Update README.md documentation with new endpoint parameter

This enables users to easily switch between production and testnet environments
or use alternative LN Markets endpoints without code changes.

--- a/src/Backend/appsettings.json
+++ b/src/Backend/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ln": {
+    "endpoint": "https://api.lnmarkets.com",
     "key": "",
     "passphrase": "",
     "secret": "",
